--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue3-demo",
-  "version": "0.0.0",
+  "name": "CucumberAI",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
